--- a/red5-flash-client/flashconf/src/flashconf.mxml
+++ b/red5-flash-client/flashconf/src/flashconf.mxml
@@ -12,6 +12,7 @@
 			import mx.controls.Alert;
 			import mx.core.UIComponent;
 			import mx.events.FlexEvent;
+			import spark.events.IndexChangeEvent;
 			import com.vispar.*;
 			
 			private var defaultRoom:String = "default";
@@ -22,10 +23,16 @@
 			//vidContainer class
 			private var vidInstance_:VideoContainer = null;
 			
+			[Bindable]
+			private var videoSet:ArrayCollection = new ArrayCollection(
+				[   
+					{value:"Please Pick A Movie", code:"Please Pick A Movie"}	
+				]
+			);
+			
 			public function onCreationComplete(event:FlexEvent) : void {
 				try {
-					
-					this.container.setInfo(edgeX_, edgeY_, debugText );
+					this.container.setInfo(edgeX_, edgeY_, debugText, videoSet );
 					var room:String = getVideoRoom();
 					if( getIsArchive() ) {
 						vidInstance_ = new VideoPlayer(container, container, room);
@@ -76,6 +83,21 @@
 				}
 				return isArchive;
 			}
+			
+			protected function stopVideo_clickHandler(event:MouseEvent):void
+			{
+				vidInstance_.stopVideo();	
+				videoList.selectedIndex = 0;
+			}
+			
+			private function videoList_changeHandler(event:IndexChangeEvent):void	
+			{
+				if( videoList.selectedIndex != 0) {
+					//status.text = "Video selected="+videoList.selectedItem.value;
+					vidInstance_.selectVideo(videoList.selectedItem.value);	
+					videoList.selectedIndex = 0;
+				}
+			}
 		]]>
 	</fx:Script>
 	<s:Group>
@@ -85,6 +107,12 @@
 		<s:Label id="lbl" width="100%" height="100%" fontSize="20" horizontalCenter="0"
 				 paddingLeft="10" paddingRight="5" paddingTop="5" text="Welcome to Howard's Room"
 				 verticalCenter="0"/>
+		
+		<s:DropDownList id="videoList" width="200" height="25" change="videoList_changeHandler(event)"
+						color="#000000" dataProvider="{videoSet}" labelField="value"
+						selectedIndex="0"/>
+		<s:Button id="stopVideo" width="100" height="25" label="Stop"
+				  click="stopVideo_clickHandler(event)" color="#4800FF" fontSize="14"/>
 	</s:Group>
 	<local:UIContainer id="container" x="0" y="0" width="640" height="540"/>
 	<s:TextArea id="debugText" x="649" y="30" width="305" height="480" text=""/>
