added logic to attach and detach camera.

--- a/red5-flash-client/flashconf/src/flashconf.mxml
+++ b/red5-flash-client/flashconf/src/flashconf.mxml
@@ -105,14 +105,28 @@
 				var isViewOnly:Boolean = vidInstance_.isViewOnly();
 				vidInstance_.switchToViewOnly( !isViewOnly );
 				this.onVideoStarted( !isViewOnly );
-			}
-			
+			}			
 			public function onVideoStarted(isViewOnly:Boolean):void{
 				//check whether it's the talker mode or other mode.
 				if( isViewOnly ) {
+					this.switchAudioOnly.enabled = false;
 					this.switchViewOnly.label = "Switch To Talker Mode";
 				} else {
+					this.switchAudioOnly.enabled = true;
 					this.switchViewOnly.label = "Switch To Viewer Mode";					
+				}
+			}
+			protected function switchAudioOnly_clickHandler(event:MouseEvent):void {
+				var isAudioOnly:Boolean = vidInstance_.isAudioOnly();
+				vidInstance_.switchToAudioOnly( !isAudioOnly );
+				this.onAudioOnly( !isAudioOnly );
+			}
+			public function onAudioOnly(onAudioOnly:Boolean):void{
+				//check whether it's the talker mode or other mode.
+				if( onAudioOnly ) {
+					this.switchAudioOnly.label = "Show Video";
+				} else {
+					this.switchAudioOnly.label = "Audio Only";					
 				}
 			}
 		]]>
@@ -133,7 +147,9 @@
 	</s:Group>
 	<local:UIContainer id="container" x="0" y="0" width="640" height="540"/>
 	<s:Button id="switchViewOnly" x="648" y="1" width="193" height="25" label="Switch To Viewer Mode"
-			  click="switchViewOnly_clickHandler(event)" color="#4800FF" fontSize="14"/>
+			  click="switchViewOnly_clickHandler(event)" color="#610877" fontSize="14"/>
+	<s:Button id="switchAudioOnly" x="778" y="1" width="193" height="25" label="Audio Only"
+			  click="switchAudioOnly_clickHandler(event)" color="#610877" fontSize="14"/>
 	<s:TextArea id="debugText" x="650" y="64" width="305" height="476" text=""/>
 	<s:Label id="debug" x="648" y="34" width="180" height="26" fontSize="20" paddingLeft="5"
 			 paddingTop="5" text="Debug Messages"/>
