--- a/red5-flash-client/flashconf/src/flashconf.mxml
+++ b/red5-flash-client/flashconf/src/flashconf.mxml
@@ -18,6 +18,7 @@
 			import spark.events.IndexChangeEvent;
 			
 			private var defaultRoom:String = "default";
+			private var defaultUser:String = "default";
 			//540=480+30*2
 			private var edgeX_:int = 0; //leave the top area for display label and others
 			private var edgeY_:int = 30;//leave the top area for display label and others
@@ -36,10 +37,15 @@
 				try {
 					this.container.setInfo(edgeX_, edgeY_, debugText, videoSet, onVideoStarted );
 					var room:String = getVideoRoom();
+					var user:String = getUserName();
 					if( getIsArchive() ) {
-						vidInstance_ = new VideoPlayer(container, container, room);
+						this.switchAudioOnly.visible = false;
+						this.switchViewOnly.visible = false;
+						this.videoList.visible = false;
+						this.stopVideo.visible = false;
+						vidInstance_ = new VideoPlayer(container, container, room, user);
 					} else {				
-						vidInstance_ = new VideoConf(container, container, room);
+						vidInstance_ = new VideoConf(container, container, room, user);
 					}
 					vidInstance_.connectServer();	
 				} catch (error:Error) {
@@ -84,6 +90,27 @@
 					Alert.show("error="+error.toString());
 				}
 				return isArchive;
+			}
+			
+			private function getUserName():String {
+				var userName:String = defaultUser;
+				try
+				{
+					if (ExternalInterface.available) 
+					{ 
+						// Perform ExternalInterface method calls here. 
+						userName = ExternalInterface.call("getUser");
+						if(userName == null) {
+							userName = defaultUser;
+						}
+						//Alert.show("userName="+userName);
+					}
+				}
+				catch (error:Error) 
+				{
+					Alert.show("error="+error.toString());
+				}
+				return userName;
 			}
 			
 			protected function stopVideo_clickHandler(event:MouseEvent):void
@@ -136,21 +163,20 @@
 			<s:HorizontalLayout/>
 		</s:layout>
 		<s:Label id="lbl" width="100%" height="100%" fontSize="20" horizontalCenter="0"
-				 paddingLeft="10" paddingRight="5" paddingTop="5" text="Welcome to Howard's Room"
+				 paddingLeft="10" paddingRight="5" paddingTop="5" text="Welcome to Howard's Vispar Session&#xd;"
 				 verticalCenter="0"/>
-		
-		<s:DropDownList id="videoList" width="200" height="25" change="videoList_changeHandler(event)"
-						color="#000000" dataProvider="{videoSet}" labelField="value"
-						selectedIndex="0"/>
-		<s:Button id="stopVideo" width="100" height="25" label="Stop"
-				  click="stopVideo_clickHandler(event)" color="#4800FF" fontSize="14"/>
 	</s:Group>
 	<local:UIContainer id="container" x="0" y="0" width="640" height="540"/>
-	<s:Button id="switchViewOnly" x="648" y="1" width="193" height="25" label="Go To Viewer Mode"
+	<s:Button id="switchViewOnly" x="356" y="1" width="177" height="25" label="Go To Viewer Mode"
 			  click="switchViewOnly_clickHandler(event)" color="#610877" fontSize="14"/>
-	<s:Button id="switchAudioOnly" x="849" y="1" width="106" height="25" label="Audio Only"
+	<s:Button id="switchAudioOnly" x="537" y="1" width="99" height="25" label="Audio Only"
 			  click="switchAudioOnly_clickHandler(event)" color="#085C77" fontSize="14"/>
 	<s:TextArea id="debugText" x="650" y="64" width="305" height="476" text=""/>
 	<s:Label id="debug" x="648" y="34" width="180" height="26" fontSize="20" paddingLeft="5"
 			 paddingTop="5" text="Debug Messages"/>
+	<s:DropDownList id="videoList" x="648" y="1" width="200" height="25"
+					change="videoList_changeHandler(event)" color="#000000"
+					dataProvider="{videoSet}" labelField="value" selectedIndex="0"/>
+	<s:Button id="stopVideo" x="855" y="1" width="100" height="25" label="Stop"
+			  click="stopVideo_clickHandler(event)" color="#4800FF" fontSize="14"/>
 </s:Application>
