--- a/red5-flash-client/flashconf/src/flashconf.mxml
+++ b/red5-flash-client/flashconf/src/flashconf.mxml
@@ -14,6 +14,7 @@
 			import mx.controls.Alert;
 			import mx.core.UIComponent;
 			import mx.events.FlexEvent;
+			import mx.events.CloseEvent;
 			
 			import spark.events.IndexChangeEvent;
 			
@@ -185,23 +186,21 @@
 				this.videoList.enabled = false;
 				this.stopVideo.enabled = false;
 			}
-			
+			private function onRequest2TalkNeedsApprovalAlertListener(eventObj:CloseEvent, parameter:String):void {
+				if (eventObj.detail == Alert.YES) {
+					this.vidInstance_.approveRequest2Talk(true, parameter);
+				} else if (eventObj.detail == Alert.NO) {
+					this.vidInstance_.approveRequest2Talk(false, parameter);
+				}
+			}
+			private function addArguments(method:Function, additionalArguments:Array):Function 
+			{
+				return function(event:Event):void {method.apply(null, [event].concat(additionalArguments));}
+			}
 			public function onRequest2TalkNeedsApproval(user:String):void {
-				var myClickHandler:Function = function (evt_obj:Object):void {
-					if (evt_obj.detail == Alert.YES) {
-						this.vidInstance_.approveRequest2Talk(true, user);
-					} else if (evt_obj.detail == Alert.NO) {
-						this.vidInstance_.approveRequest2Talk(false, user);
-					}
-				};
-				try
-				{
-					Alert.show("Alert", user+" requested to join the conversation. Allow him?", Alert.YES | Alert.NO, null, myClickHandler);
-				}
-				catch (error:Error) 
-				{
-					this.container.logDebug("Alert error="+error.toString());
-				}
+				Alert.show("A user: "+user+" requested to join the conversation. Allow him?", "Alert",
+					Alert.YES | Alert.NO, this, 
+					addArguments(onRequest2TalkNeedsApprovalAlertListener, [user]), null, Alert.YES);
 			}
 		]]>
 	</fx:Script>
