added logic to enable audio only mode if bw < 500kbps

--- a/red5-flash-client/flashconf/src/flashconf.mxml
+++ b/red5-flash-client/flashconf/src/flashconf.mxml
@@ -180,11 +180,17 @@
 				}
 			}
 			
-			public function onFatalNetworkTooSlowError():void{
-				this.switchAudioOnly.enabled = false;
-				this.switchViewOnly.enabled = false;
-				this.videoList.enabled = false;
-				this.stopVideo.enabled = false;
+			public function onFatalNetworkTooSlowError(isAudioOnlyMode:Boolean):void{
+				if( isAudioOnlyMode ) {
+					Alert.show("Your network speed is too slow, switch to audio only mode!");
+					this.switchAudioOnly.enabled = false;
+					this.switchAudioOnly.label = "Audio Only";
+				} else {
+					this.switchAudioOnly.enabled = false;
+					this.switchViewOnly.enabled = false;
+					this.videoList.enabled = false;
+					this.stopVideo.enabled = false;
+				}
 			}
 			private function onRequest2TalkNeedsApprovalAlertListener(eventObj:CloseEvent, parameter:String):void {
 				if (eventObj.detail == Alert.YES) {
