--- a/android-client/Vispar/res/values/strings_activity_login.xml
+++ b/android-client/Vispar/res/values/strings_activity_login.xml
@@ -9,7 +9,8 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_info">Either email address or password is incorrect</string>
+    <string name="error_incorrect_info_login">Either email address or password is incorrect</string>
     <string name="error_field_required">This field is required</string>
+    <string name="action_forget_password">Forget password</string>
 
 </resources>
