--- a/android-client/Vispar/res/values/strings_activity_register.xml
+++ b/android-client/Vispar/res/values/strings_activity_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="title_activity_register">Register</string>
     <string name="prompt_username">User Name</string>
     <string name="action_register">Register</string>
     <string name="action_register_short">Register</string>
