--- a/android-client/Vispar/res/layout/fragment_main.xml
+++ b/android-client/Vispar/res/layout/fragment_main.xml
@@ -6,6 +6,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.vispar.MainActivity$PlaceholderFragment" >
 
+    <ProgressBar
+        android:id="@+id/goto_room_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
     <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
