--- a/android-client/Vispar/res/layout/fragment_main.xml
+++ b/android-client/Vispar/res/layout/fragment_main.xml
@@ -14,6 +14,13 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
     <TextView
+        android:id="@+id/goto_room_progress_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/loading_in_progress"
+        android:visibility="gone" />
+    <TextView
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
