--- a/android-client/Vispar/res/values/strings_activity_register.xml
+++ b/android-client/Vispar/res/values/strings_activity_register.xml
@@ -4,6 +4,6 @@
     <string name="prompt_username">User Name</string>
     <string name="action_register">Register</string>
     <string name="action_register_short">Register</string>
-    <string name="error_invalid_username">This username is too short</string>
+    <string name="error_invalid_username">This username is too short(at least 4 characters) or it contains special characters!</string>
     <string name="error_incorrect_info_register">Either email address or password is incorrect</string>
 </resources>
