--- a/android-client/Vispar/res/layout/activity_forget_password.xml
+++ b/android-client/Vispar/res/layout/activity_forget_password.xml
@@ -8,12 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".settings.RegisterActivity" >
+    tools:context="com.vispar.settings.ForgetPasswordActivity" >
 
-    <!-- Register progress -->
-
-    <ProgressBar
-        android:id="@+id/register_progress"
+	<ProgressBar
+        android:id="@+id/forgetpassword_progress"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,30 +19,18 @@
         android:visibility="gone" />
 
     <ScrollView
-        android:id="@+id/register_form"
+        android:id="@+id/forgetpassword_form"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <LinearLayout
-            android:id="@+id/email_register_form"
+            android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <EditText
-                android:id="@+id/username_register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_username"
-                android:imeActionId="@+id/register"
-                android:imeActionLabel="@string/action_register_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="text"
-                android:maxLines="1"
-                android:singleLine="true" />
-            
             <AutoCompleteTextView
-                android:id="@+id/email_register"
+                android:id="@+id/forgetpassword_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/prompt_email"
@@ -52,25 +38,13 @@
                 android:maxLines="1"
                 android:singleLine="true" />
 
-            <EditText
-                android:id="@+id/password_register"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/prompt_password"
-                android:imeActionId="@+id/register"
-                android:imeActionLabel="@string/action_register_short"
-                android:imeOptions="actionUnspecified"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:singleLine="true" />
-
             <Button
-                android:id="@+id/email_register_button"
+                android:id="@+id/forgetpassword_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/action_register"
+                android:text="@string/action_sendme_password"
                 android:textStyle="bold" />
             
 			<LinearLayout
@@ -79,22 +53,23 @@
 			    android:orientation="horizontal" >
 		
 			    <Button
-			        android:id="@+id/click_to_login_button_from_register"
+			        android:id="@+id/click_to_register_button_from_forgetpassword"
 			        style="?android:textAppearanceSmall"
 			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
+			        android:layout_height="wrap_content" 
 		            android:layout_weight=".50"
-			        android:text="@string/action_sign_in"
+			        android:text="@string/action_register"
 			        android:textStyle="bold" />
 		
 			    <Button
-			        android:id="@+id/click_to_forget_password_button_from_register"
+			        android:id="@+id/click_to_login_button_from_forgetpassword"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 		            android:layout_weight=".50"
-			        android:text="@string/action_forget_password" />
-		
+			        android:text="@string/action_sign_in" />
 			</LinearLayout>
         </LinearLayout>
+        
     </ScrollView>
+
 </LinearLayout>
