--- a/android-client/Vispar/res/values/strings_activity_login.xml
+++ b/android-client/Vispar/res/values/strings_activity_login.xml
@@ -10,6 +10,7 @@
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_info_login">Either email address or password is incorrect</string>
+    <string name="error_incorrect_info_forgetpassowrd">Email address cannot be found</string>
     <string name="error_field_required">This field is required</string>
     <string name="action_forget_password">Forget password</string>
 
