--- a/android-client/Vispar/res/layout/chat_layout.xml
+++ b/android-client/Vispar/res/layout/chat_layout.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -6,7 +7,7 @@
         android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/messages"
+            android:id="@+id/chat_messages"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -23,19 +24,19 @@
             android:gravity="center_vertical">
 
         <EditText
-                android:id="@+id/message_input"
+                android:id="@+id/chat_message_input"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/prompt_message"
-                android:imeActionId="@+id/send"
+                android:imeActionId="@+id/chat_message_send"
                 android:imeActionLabel="@string/action_send"
                 android:imeOptions="actionSend"
                 android:inputType="text"
                 android:maxLines="1"
                 android:singleLine="true"/>
         <ImageButton
-                android:id="@+id/send_button"
+                android:id="@+id/send_chat_message_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_menu_send"
