--- a/android-client/chatroomextension/res/layout/item_action.xml
+++ b/android-client/chatroomextension/res/layout/item_action.xml
@@ -7,7 +7,7 @@
         android:paddingTop="@dimen/spacing">
 
     <TextView
-            android:id="@+id/username"
+            android:id="@+id/chat_username"
             style="?android:textAppearanceMedium"
             android:textColor="?android:textColorPrimary"
             android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
             android:singleLine="true"
             android:textStyle="bold"/>
     <TextView
-            android:id="@+id/action"
+            android:id="@+id/chat_action"
             style="?android:textAppearanceMedium"
             android:textColor="?android:textColorSecondary"
             android:text="@string/user_action_typing"
