--- a/android-client/chatroomextension/res/layout/item_message.xml
+++ b/android-client/chatroomextension/res/layout/item_message.xml
@@ -6,7 +6,7 @@
         android:paddingTop="@dimen/spacing">
 
     <TextView
-            android:id="@+id/username"
+            android:id="@+id/chat_username"
             style="?android:textAppearanceMedium"
             android:textColor="?android:textColorPrimary"
             android:layout_width="wrap_content"
@@ -14,7 +14,7 @@
             android:singleLine="true"
             android:textStyle="bold"/>
     <TextView
-            android:id="@+id/message"
+            android:id="@+id/chat_message"
             style="?android:textAppearanceMedium"
             android:textColor="?android:textColorPrimary"
             android:layout_width="wrap_content"
