--- a/red5-flash-client/flashconf/src/flashconf.mxml
+++ b/red5-flash-client/flashconf/src/flashconf.mxml
@@ -8,8 +8,7 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
-			import com.vispar.*;
-			
+			import com.vispar.*;			
 			import mx.collections.ArrayCollection;
 			import mx.controls.Alert;
 			import mx.core.UIComponent;
@@ -275,20 +274,20 @@
 			<s:HorizontalLayout/>
 		</s:layout>
 		<s:Label id="lbl" width="100%" height="100%" fontSize="20" horizontalCenter="0"
-				 paddingLeft="10" paddingRight="5" paddingTop="5" text="Welcome to Howard's Vispar Session&#xd;"
+				 paddingLeft="10" paddingRight="5" paddingTop="5" text="Welcome to Vispar"
 				 verticalCenter="0"/>
 	</s:Group>
 	<local:UIContainer id="container" x="0" y="0" width="640" height="540"/>
-	<s:Button id="switchViewOnly" x="356" y="1" width="177" height="25" label="Go To Viewer Mode"
+	<s:Button id="switchViewOnly" x="181" y="1" width="149" height="25" label="Go To Viewer Mode"
 			  click="switchViewOnly_clickHandler(event)" color="#610877" fontSize="14"/>
-	<s:Button id="switchAudioOnly" x="537" y="1" width="99" height="25" label="Audio Only"
+	<s:Button id="switchAudioOnly" x="326" y="1" width="99" height="25" label="Audio Only"
 			  click="switchAudioOnly_clickHandler(event)" color="#085C77" fontSize="14"/>
-	<s:TextArea id="debugText" x="650" y="64" width="305" height="476" text=""/>
-	<s:Label id="debug" x="648" y="34" width="180" height="26" fontSize="20" paddingLeft="5"
-			 paddingTop="5" text="Debug Messages"/>
-	<s:DropDownList id="videoList" x="648" y="1" width="200" height="25"
+	<s:TextArea id="debugText" x="650" y="34" width="305" height="506" text=""/>
+	<s:DropDownList id="videoList" x="433" y="1" width="143" height="25"
 					change="videoList_changeHandler(event)" color="#000000"
 					dataProvider="{videoSet}" labelField="value" selectedIndex="0"/>
-	<s:Button id="stopVideo" x="855" y="1" width="100" height="25" label="Stop"
+	<s:Button id="stopVideo" x="584" y="1" width="56" height="25" label="Stop"
 			  click="stopExternalVideo_clickHandler(event)" color="#4800FF" fontSize="14"/>
+	<s:Label id="debug" x="648" y="0" width="180" height="26" fontSize="20" paddingLeft="5"
+			 paddingTop="5" text="Debug Messages"/>
 </s:Application>
